<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_popup"
    android:background="@drawable/my_border"
    android:layout_margin="30dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@drawable/my_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"

            android:src="@drawable/sync_icon" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:prompt="@string/choose"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"

            android:src="@drawable/sync_icon" />

        <EditText
            android:id="@+id/edt_vehiclebrand"
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/vehiclebrand"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"

            android:src="@drawable/sync_icon" />

        <EditText
            android:id="@+id/edt_vehiclemodel"
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/vehiclemodel"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center"

            android:src="@drawable/sync_icon" />

        <EditText
            android:id="@+id/edt_vehiclecolor"
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/vehiclecolor"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:layout_height="match_parent" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_info"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/my_border"
        android:backgroundTint="@color/yellow"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>